samples/_failures_safe/1761725587_0aed5b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5e332fcc.c: In function ‘main’:
./samples/SAFE/__tmp_5e332fcc.c:170:9: error: expected declaration or statement at end of input
  170 |         free_matrix(mat2);
      |         ^~~~~~~~~~~
./samples/SAFE/__tmp_5e332fcc.c:170:9: error: expected declaration or statement at end of input
